--- a/src/sass/layout/layout.sass
+++ b/src/sass/layout/layout.sass
@@ -6,33 +6,39 @@ body, html
   height: 100%
 
 body
-  font-family: "Roboto", sans-serif
+  font-family: 'Nunito', sans-serif
   line-height: 1.42
   font-size: 16px
   display: flex
   flex-direction: column
-  color: #333
+  color: #5b5b5b
   padding: 0
   margin: 0
 
-ul, p
+ul, p, li
   padding: 0
   margin: 0
-  li
-    list-style: none
+  font-size: 16px
+
+p
+  line-height: 24px
+
+li
+  list-style: none
 
 a
+  color: $font-color
   text-decoration: none
   &:hover
     text-decoration: none
 
 h1, h2, h3, h4, h5, h6
   margin: 0
-  color: #1c1c1c
+  font-family: 'Russo One', sans-serif
+  text-transform: uppercase
 
-.wrapper
-  flex-grow: 1
-  position: relative
+h1
+  font-size: 45px
 
 .hide
   position: absolute
