--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,6 +1,7 @@
 // vars
-$accent: #ff2d2d
-$font-color: #333
+$accent: #EF7F1A
+$accent-grdient: linear-gradient(83.6deg, #EF7F1A 0.85%, #EBBB12 98.87%)
+$font-color: #5b5b5b
 $border-color: #DADCE0
 
 
