--- a/src/sass/pages/main.sass
+++ b/src/sass/pages/main.sass
@@ -1,19 +1,337 @@
-.one, .two
+.wrapper
 	display: flex
+	flex-direction: column
+	flex-grow: 1
+	
+.content
+	flex: 1 1 auto
+	
+.container
+	max-width: 980px
+	margin: 0 auto
+	padding: 0 80px
+	height: 100%
 
-.one
-	background-color: lightgreen
-	align-items: center
-	justify-content: center
-	min-height: 1000px
+@media screen and (max-width: 768px)
+	.container
+		padding: 0 20px
 
-.two
-	background-color: lightblue
-	align-items: center
-	justify-content: space-around
-	min-height: 1000px
+.hero, .about, .comparison
+	padding-bottom: 80px
 
 @media screen and (max-width: 768px)
 	.one
 		background-color: tomato
+
+
+// Hero page
+
+.header
+	padding-top: 60px
+
+.header__row
+	display: flex
+	justify-content: space-between
+
+.header__menu
+	display: flex
+	align-items: center
+	li
+		max-height: 39px
+		margin-right: 24px
+		&:last-child
+			margin-right: 0
+		img
+			max-width: 167px
+		a
+			font-size: 16px
+			color: $font-color
+			transition: all 300ms
+			&:hover
+				color: $accent
 	
+@media screen and (max-width: 768px)
+	.header__menu
+		li
+			display: none
+			&:first-child
+				display: block
+
+.header__btns
+	display: flex
+	align-items: center
+	a
+		font-size: 13px
+		padding: 13px 26px
+		border-radius: 6px
+		line-height: 13px
+
+@media screen and (max-width: 500px)
+	.header__menu
+		width: 100%
+		justify-content: center
+	.header__btns
+		display: none
+
+.header__btns_wrap
+	position: relative
+	display: flex
+	background: $accent-grdient
+	height: 100%
+	margin-right: 24px
+	border-radius: 8px
+	&:last-child
+		margin-right: 0
+	padding: 2px
+	transition: all 300ms
+	&:hover
+		box-shadow: 0px 2px 12px rgba(91, 91, 91, 0.25)
+
+.header__btns_call
+	color: #f8f8f8
+
+.header__btns_msg
+	background-color: #fff
+	color: $accent
+	
+.hero__row
+	display: flex
+	justify-content: space-between
+	align-items: center
+	padding: 30% 0
+	// height: 90vh
+	flex-wrap: wrap
+
+@media screen and (max-width: 900px)
+	.hero__row
+		justify-content: center
+		padding: 15% 0
+
+.hero__text
+	min-width: 363px
+	margin-right: 20px
+
+@media screen and (max-width: 900px)
+	.hero__text
+		margin-right: 0
+		margin-bottom: 40px
+
+@media screen and (max-width: 500px)
+	.hero__text
+		min-width: 100%
+
+.subtitle
+	font-size: 18px
+	line-height: 20px
+
+.title
+	line-height: 54px
+
+@media screen and (max-width: 500px)
+	.subtitle
+		font-size: 14px
+		line-height: 16px
+	.title
+		font-size: 28px
+		line-height: 34px
+
+.title__accent
+	color: $accent
+
+.hero__btn
+	display: inline-block
+	padding: 18px 36px
+	color: #f8f8f8
+	background: $accent-grdient
+	border-radius: 6px
+	font-size: 18px
+	line-height: 18px
+	margin-top: 40px
+
+@media screen and (max-width: 900px)
+	.hero__btn
+		width: 100%
+		text-align: center
+
+.hero__links
+	display: flex
+	flex-direction: column
+	width: 100%
+	max-width: 340px
+	min-width: 305px
+	li
+		margin-bottom: 40px
+		&:last-child
+			margin-bottom: 0
+
+@media screen and (max-width: 900px)
+	.hero__links
+		max-width: 360px
+
+@media screen and (max-width: 340px)
+	.hero__links
+		min-width: 100%
+
+.hero__card
+	display: flex
+	align-items: center
+	justify-content: space-between
+	border: 1px solid $border-color
+	background-color: #fff
+	border-radius: 6px
+	padding: 20px
+	padding-right: 10px
+	box-shadow: 0px 0px 20px rgba(91, 91, 91, .25)
+	color: $font-color
+	transition: all 300ms
+	&:hover
+		color: $accent
+
+@media screen and (max-width: 340px)
+	.hero__card
+		font-size: 13px
+
+.hero__card_wrapper
+	display: flex
+	align-items: center
+	img
+		margin-right: 10px
+
+.blob__first
+	position: absolute
+	z-index: -1
+	right: 24%
+	bottom: 14%
+
+.blob__second
+	position: absolute
+	z-index: -1
+	right: 40%
+
+@media screen and (max-width: 1200px)
+	.blob__first
+		position: absolute
+		z-index: -1
+		right: 8%
+		bottom: 15%
+
+	.blob__second
+		position: absolute
+		z-index: -1
+		right: 34%
+		top: 38%
+
+@media screen and (max-width: 992px)
+	.blob
+		&__first, &__second
+			display: none
+
+// About
+
+.about__text
+	margin: 16px 0
+
+.about__link
+	display: flex
+	align-items: center
+	transition: all 300ms
+	&:hover
+		color: $accent
+	img
+		margin-left: 10px
+
+// Comparison
+.comparison__row
+	display: flex
+	justify-content: space-between
+
+@media screen and (max-width: 872px)
+	.comparison__row
+		flex-direction: column
+		align-items: center
+
+.comparison__card
+	display: flex
+	flex-direction: column
+	padding: 32px 24px
+	background-color: #f6f6f6
+	border: 1px solid $border-color
+	border-radius: 6px
+	max-width: 339px
+
+.comparison__card_active
+	background-color: #fff
+	border: 1px solid $accent
+	box-shadow: 0px 0px 20px rgba(91, 91, 91, 0.25)
+	margin-right: 20px
+
+@media screen and (max-width: 872px)
+	.comparison__card_active
+		margin-bottom: 20px
+		margin-right: 0
+
+.comparison__item
+	display: flex
+	align-items: center
+	margin-bottom: 24px
+	img, svg
+		margin-right: 12px
+
+@media screen and (max-width: 320px)
+	.comparison__item
+		img, svg
+			margin-right: 6px
+
+.comparison__text_title
+	font-size: 24px
+	line-height: 24px
+
+.comparison__price
+	margin: 0 auto
+	max-width: 218px
+	text-align: center
+	.comparison__text
+		&:last-child
+			text-align: end
+
+.comparison__price_accent
+	font-size: 24px
+	color: $accent
+
+.comparison__price_gray
+	font-size: 24px
+	color: $font-color
+
+@media screen and (max-width: 390px)
+	.comparison__text
+		font-size: 14px
+		line-height: 16px
+	.comparison__price_gray, .comparison__price_accent
+		font-size: 21px
+
+@media screen and (max-width: 320px)
+	.comparison__price_gray
+		font-size: 17px
+
+.comparison__price_width
+	max-width: 100%
+
+.comparison__btn
+	text-align: center
+	color: #f8f8f8
+	border-radius: 6px
+	margin-top: 24px
+	font-size: 16px
+	line-height: 16px
+	padding: 16px 32px
+	background: $accent-grdient
+
+.comparison__btn_hover
+	transition: all 300ms
+	&:hover
+		box-shadow: 0 0 20px rgba(91, 91, 91, .25)
+
+.comparison__btn_gray
+	background: #cccccc
+	color: $font-color
+	cursor: not-allowed
