swiper slider complete

--- a/src/sass/pages/main.sass
+++ b/src/sass/pages/main.sass
@@ -16,7 +16,7 @@
 	.container
 		padding: 0 20px
 
-.hero, .about, .comparison
+.hero, .about, .comparison, .clients
 	padding-bottom: 80px
 
 @media screen and (max-width: 768px)
@@ -335,3 +335,63 @@
 	background: #cccccc
 	color: $font-color
 	cursor: not-allowed
+
+// Clients
+.clients
+	.container
+		padding: 32px
+
+.clients__title
+	margin-bottom: 24px
+
+.swiper, .swiper__body
+	display: flex
+	align-items: center
+	display: none
+
+.swiper__left
+	margin-right: 32px
+	img
+		transform: scaleX(-1)
+
+.swiper__item
+	margin-right: 32px
+	img
+		max-width: 240px
+
+.slider-container
+	position: relative
+
+.swiper-container
+	max-width: 820px
+
+.swiper-lazy-preloader
+	padding-top: 40px
+	border-color: $accent
+
+.swiper-slide
+	text-align: center
+	img
+		max-width: 100%
+
+@media screen and (max-width: 680px)
+	.swiper-container
+		max-width: 320px
+	.swiper-slide
+		img
+			max-width: 100%
+
+@media screen and (max-width: 415px)
+	.swiper-container
+		max-width: 250px
+
+@media screen and (max-width: 320px)
+	.swiper-container
+		max-width: 160px
+
+
+.swiper-button-next, .swiper-button-prev
+	outline: none
+	&::after
+		// content: url('../img/icons/arrow.jpg')
+		color: $accent
